# gpt_pl

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
configs/: classification.yaml  config.yaml  pretrain.yaml
configs/data/: classification.yaml  default.yaml  pretrain.yaml
configs/model/: classification.yaml  gpt.yaml  pretrain.yaml
configs/trainer/: classification.yaml  default.yaml  pretrain.yaml
src/: callbacks.py  data_modules.py  dataset.py  datasets.py  model.py  tasks.py  train.py  utils.py
